--- a/index.html
+++ b/index.html
@@ -2,53 +2,177 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
     <meta charset="utf-8">
     <link rel="stylesheet" href="master.css">
   </head>
   <body>
-    <div class="top-bar">
+    <canvas id="canvas"></canvas>
+    <div class="about-container">
+      <div class="about-description">
+        <h1>MARCO PONTONE</h1>
+        <p>Hi. I'm a Computer Engineering Student at University of Pisa.</p>
+        <div class="nav-buttons">
+          <a href="#">ABOUT</a>
+          <a href="#">SKILLS</a>
+          <a href="#">PROJECTS</a><br><br><br><br>
 
-      <div class="main-name">
-        <p>MARCO PONTONE</p>
-      </div>
-      <div class="top-button-spacer">
-        <a href="#">Facebook</a>
-        <a href="#"><p>twitter</p></a>
-      </div>
-
-
-    </div>
-
-    <div class="self-image">
-
-    </div>
-    <div class="center" id="Intro">
-
-    </div>
-    <div class="nav-bar">
-      <div class="button">
-        <a href="#Intro">
-        <span class="square"></span>
-        <p>Intro</p></a>
-      </div>
-      <div class="button">
-        <a href="#Skills">
-        <span class="square"></span>
-        <p>Skills</p></a>
-      </div>
-      <div class="button">
-        <a href="#">
-        <span class="square"></span>
-        <p>Projects</p></a>
-      </div>
-      <div class="button">
-        <a href="#">
-        <span class="square"></span>
-        <p>Contact</p></a>
+          <a href="#">CONTACT</a>
+        </div>
       </div>
     </div>
-    <div class="" id="Skills">
-
+    <div class="about">
+      <h1>About Me</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
+
+    <script>
+            window.requestAnimFrame = function()
+        	{
+        		return (
+        			window.requestAnimationFrame       ||
+        			window.webkitRequestAnimationFrame ||
+        			window.mozRequestAnimationFrame    ||
+        			window.oRequestAnimationFrame      ||
+        			window.msRequestAnimationFrame     ||
+        			function(/* function */ callback){
+        				window.setTimeout(callback, 1000 / 60);
+        			}
+        		);
+        }();
+
+        var canvas = document.getElementById('canvas');
+        var context = canvas.getContext('2d');
+
+        //get DPI
+        let dpi = window.devicePixelRatio || 1;
+        context.scale(dpi, dpi);
+        console.log(dpi);
+
+        function fix_dpi() {
+        //get CSS height
+        //the + prefix casts it to an integer
+        //the slice method gets rid of "px"
+        let style_height = +getComputedStyle(canvas).getPropertyValue("height").slice(0, -2);
+        let style_width = +getComputedStyle(canvas).getPropertyValue("width").slice(0, -2);
+
+        //scale the canvas
+        canvas.setAttribute('height', style_height * dpi);
+        canvas.setAttribute('width', style_width * dpi);
+        }
+
+        	var particle_count = 70,
+        		particles = [],
+        		couleurs   = ["#999", "#AA0000", "#fff","#505050"];
+            function Particle()
+            {
+
+                this.radius = Math.round((Math.random()*3)+5);
+                this.x = Math.floor((Math.random() * ((+getComputedStyle(canvas).getPropertyValue("width").slice(0, -2) * dpi) - this.radius + 1) + this.radius));
+                this.y = Math.floor((Math.random() * ((+getComputedStyle(canvas).getPropertyValue("height").slice(0, -2) * dpi) - this.radius + 1) + this.radius));
+                this.color = couleurs[Math.round(Math.random()*couleurs.length)];
+                this.speedx = Math.round((Math.random()*201)+0)/100;
+                this.speedy = Math.round((Math.random()*201)+0)/100;
+
+                switch (Math.round(Math.random()*couleurs.length))
+                {
+                    case 1:
+                    this.speedx *= 1;
+                    this.speedy *= 1;
+                    break;
+                    case 2:
+                    this.speedx *= -1;
+                    this.speedy *= 1;
+                    break;
+                    case 3:
+                    this.speedx *= 1;
+                    this.speedy *= -1;
+                    break;
+                    case 4:
+                    this.speedx *= -1;
+                    this.speedy *= -1;
+                    break;
+                }
+
+                this.move = function()
+                {
+
+                    context.beginPath();
+                    context.globalCompositeOperation = 'source-over';
+                    context.fillStyle   = this.color;
+                    context.globalAlpha = 1;
+                    context.arc(this.x, this.y, this.radius, 0, Math.PI*2, false);
+                    context.fill();
+                    context.closePath();
+
+                    this.x = this.x + this.speedx;
+                    this.y = this.y + this.speedy;
+
+                    if(this.x <= 0+this.radius)
+                    {
+                        this.speedx *= -1;
+                    }
+                    if(this.x >= canvas.width-this.radius)
+                    {
+                        this.speedx *= -1;
+                    }
+                    if(this.y <= 0+this.radius)
+                    {
+                        this.speedy *= -1;
+                    }
+                    if(this.y >= canvas.height-this.radius)
+                    {
+                        this.speedy *= -1;
+                    }
+
+                    for (var j = 0; j < particle_count; j++)
+                    {
+                        var particleActuelle = particles[j],
+                            yd = particleActuelle.y - this.y,
+                            xd = particleActuelle.x - this.x,
+                            d  = Math.sqrt(xd * xd + yd * yd);
+
+                        if ( d < 200 )
+                        {
+                            context.beginPath();
+                            context.globalAlpha = (200 - d) / (200 - 0);
+                            context.globalCompositeOperation = 'destination-over';
+                            context.lineWidth = 1;
+                            context.moveTo(this.x, this.y);
+                            context.lineTo(particleActuelle.x, particleActuelle.y);
+                            context.strokeStyle = this.color;
+                            context.lineCap = "round";
+                            context.stroke();
+                            context.closePath();
+                        }
+                    }
+                };
+            };
+            for (var i = 0; i < particle_count; i++)
+            {
+                fix_dpi();
+                var particle = new Particle();
+                particles.push(particle);
+            }
+
+
+            function animate()
+            {
+                fix_dpi();
+                context.clearRect(0, 0, canvas.width, canvas.height);
+                for (var i = 0; i < particle_count; i++)
+                {
+                    particles[i].move();
+                }
+                requestAnimFrame(animate);
+            }
+
+
+
+
+            animate();
+
+    </script>
   </body>
 </html>
