[FIX] update git

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="master.css">
     <script src="functions.js"></script>
+    <title>Marco Pontone</title>
   </head>
   <body>
     <canvas id="canvas"></canvas>
