[ADD] added about text and project links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="about" id="about">
       <h1>About Me</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Computer Engineering student at University of Pisa. <br>Unreal Engine 4 Programmer (8+ years). <br>Automation, Home intelligence and AI enthusiast with 10 years of electronics and mobile repair experience. <br>Science and Space and cat lover. <br>Former <a href="http://mlpi.ing.unipi.it/spaceapps/">NASA Space Apps Pisa</a> co-founder and Organizator. </p>
     </div>
     <div class="about" id="skills">
       <h1>Skills</h1>
@@ -68,7 +68,7 @@
         </div>
         <div class="title">
           <h4>DSKY-2 Replica</h4>
-          <h6 style="color: yellow">Status: Incomplete</h6>
+          <h6 style="color: yellow">Status: incomplete</h6>
         </div>
       </a>
       <a href="#" class="project">
@@ -107,13 +107,13 @@
           <h6 style="color: yellow">Status: Incomplete</h6>
         </div>
       </a>
-      <a href="#" class="project">
+      <a href="http://mlpi.ing.unipi.it/spaceapps" class="project">
         <div class="imgcontainer">
-          <img src="images/ue4.png" alt="ue4">
+          <img src="images/sap.png" alt="space apps pisa">
         </div>
         <div class="title">
-          <h4>RoboRace UE4 AI Simulator</h4>
-          <h6 style="color: yellow">Status: Incomplete</h6>
+          <h4>NASA SpaceApps Pisa</h4>
+          <h6 style="color: green">Status: Ongioing</h6>
         </div>
       </a>
 
