--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <meta charset="utf-8">
+    <link href="hamburgers.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="master.css">
     <script src="functions.js"></script>
     <title>Marco Pontone</title>
@@ -18,9 +20,20 @@
         <h1>MARCO PONTONE</h1>
         <p>Hi! I'm a Computer Engineering Student at University of Pisa.</p>
         <div class="nav-buttons">
-          <button type="button" name="button" onclick="switchVisibility('about')">ABOUT</button>
-          <button type="button" name="button" onclick="switchVisibility('skills')">SKILLS</button>
-          <button type="button" name="button" onclick="switchVisibility('projects')">PROJECTS</button>
+          <div class="dropdown-content" id="myDropdown">
+            <a href="#about">ABOUT</a>
+            <a href="#skills">SKILLS</a>
+            <a href="#projects">PROJECTS</a>
+          </div>
+          <button class="hamburger hamburger--emphatic" type="button" onclick="buttonActive()">
+            <span class="hamburger-box">
+              <span class="hamburger-inner">
+              </span>
+            </span>
+          </button>
+          <button class="btn" type="button" name="button" onclick="switchVisibility('about')">ABOUT</button>
+          <button class="btn" type="button" name="button" onclick="switchVisibility('skills')">SKILLS</button>
+          <button class="btn" type="button" name="button" onclick="switchVisibility('projects')">PROJECTS</button>
         </div>
         <div class="socialbar">
           <a class="social" href="https://www.facebook.com/khor94">
@@ -54,7 +67,7 @@
         Languages:<pre> - Italian [Fluent], English [Fluent];</pre>
         Programming Languages:<pre> - C++, Java, PHP, JavaScript, AJAX, MySQL, JSON;</pre>
         Others:<pre> - HTML, CSS, HTTP, HTTPS, Crypto and Security algorithms;</pre>
-        Experience:<pre> - Sofware and Hardware technician [5 Years]; <br> - NASA Space Apps Challenge 2019 at University of Pisa (Organizer);</pre>
+        Experience:<pre> - Sofware and Hardware technician [5 Years]; <br> - NASA Space Apps 2019 at University of Pisa (Organizer);</pre>
         <br>
         computer-MBP-aa48: self --status <br>
         Status:<pre> - Unemployed, Student</pre>
@@ -121,151 +134,165 @@
     </div>
 
     <script>
-    window.requestAnimFrame = function()
-    {
-    return (
-      window.requestAnimationFrame       ||
-      window.webkitRequestAnimationFrame ||
-      window.mozRequestAnimationFrame    ||
-      window.oRequestAnimationFrame      ||
-      window.msRequestAnimationFrame     ||
-      function(/* function */ callback){
-        window.setTimeout(callback, 1000 / 60);
+      window.requestAnimFrame = function()
+      {
+      return (
+        window.requestAnimationFrame       ||
+        window.webkitRequestAnimationFrame ||
+        window.mozRequestAnimationFrame    ||
+        window.oRequestAnimationFrame      ||
+        window.msRequestAnimationFrame     ||
+        function(/* function */ callback){
+          window.setTimeout(callback, 1000 / 60);
+        }
+      );
+      }();
+
+      var canvas = document.getElementById('canvas');
+      var context = canvas.getContext('2d');
+
+      //get DPI
+      let dpi = window.devicePixelRatio || 1;
+      context.scale(dpi, dpi);
+      console.log(dpi);
+
+      function fix_dpi() {
+      //get CSS height
+      //the + prefix casts it to an integer
+      //the slice method gets rid of "px"
+      let style_height = +getComputedStyle(canvas).getPropertyValue("height").slice(0, -2);
+      let style_width = +getComputedStyle(canvas).getPropertyValue("width").slice(0, -2);
+
+      //scale the canvas
+      canvas.setAttribute('height', style_height * dpi);
+      canvas.setAttribute('width', style_width * dpi);
       }
-    );
-    }();
 
-    var canvas = document.getElementById('canvas');
-    var context = canvas.getContext('2d');
+      var particle_count = 70,
+      particles = [],
+      couleurs   = ["#999", "#AA0000", "#fff","#505050"];
+      function Particle()
+      {
 
-    //get DPI
-    let dpi = window.devicePixelRatio || 1;
-    context.scale(dpi, dpi);
-    console.log(dpi);
+          this.radius = Math.round((Math.random()*3)+5);
+          this.x = Math.floor((Math.random() * ((+getComputedStyle(canvas).getPropertyValue("width").slice(0, -2) * dpi) - this.radius + 1) + this.radius));
+          this.y = Math.floor((Math.random() * ((+getComputedStyle(canvas).getPropertyValue("height").slice(0, -2) * dpi) - this.radius + 1) + this.radius));
+          this.color = couleurs[Math.round(Math.random()*couleurs.length)];
+          this.speedx = Math.round((Math.random()*201)+0)/100;
+          this.speedy = Math.round((Math.random()*201)+0)/100;
 
-    function fix_dpi() {
-    //get CSS height
-    //the + prefix casts it to an integer
-    //the slice method gets rid of "px"
-    let style_height = +getComputedStyle(canvas).getPropertyValue("height").slice(0, -2);
-    let style_width = +getComputedStyle(canvas).getPropertyValue("width").slice(0, -2);
+          switch (Math.round(Math.random()*couleurs.length))
+          {
+              case 1:
+              this.speedx *= 1;
+              this.speedy *= 1;
+              break;
+              case 2:
+              this.speedx *= -1;
+              this.speedy *= 1;
+              break;
+              case 3:
+              this.speedx *= 1;
+              this.speedy *= -1;
+              break;
+              case 4:
+              this.speedx *= -1;
+              this.speedy *= -1;
+              break;
+          }
 
-    //scale the canvas
-    canvas.setAttribute('height', style_height * dpi);
-    canvas.setAttribute('width', style_width * dpi);
-    }
+          this.move = function()
+          {
 
-    var particle_count = 70,
-    particles = [],
-    couleurs   = ["#999", "#AA0000", "#fff","#505050"];
-    function Particle()
-    {
+              context.beginPath();
+              context.globalCompositeOperation = 'source-over';
+              context.fillStyle   = this.color;
+              context.globalAlpha = 1;
+              context.arc(this.x, this.y, this.radius, 0, Math.PI*2, false);
+              context.fill();
+              context.closePath();
 
-        this.radius = Math.round((Math.random()*3)+5);
-        this.x = Math.floor((Math.random() * ((+getComputedStyle(canvas).getPropertyValue("width").slice(0, -2) * dpi) - this.radius + 1) + this.radius));
-        this.y = Math.floor((Math.random() * ((+getComputedStyle(canvas).getPropertyValue("height").slice(0, -2) * dpi) - this.radius + 1) + this.radius));
-        this.color = couleurs[Math.round(Math.random()*couleurs.length)];
-        this.speedx = Math.round((Math.random()*201)+0)/100;
-        this.speedy = Math.round((Math.random()*201)+0)/100;
+              this.x = this.x + this.speedx;
+              this.y = this.y + this.speedy;
 
-        switch (Math.round(Math.random()*couleurs.length))
-        {
-            case 1:
-            this.speedx *= 1;
-            this.speedy *= 1;
-            break;
-            case 2:
-            this.speedx *= -1;
-            this.speedy *= 1;
-            break;
-            case 3:
-            this.speedx *= 1;
-            this.speedy *= -1;
-            break;
-            case 4:
-            this.speedx *= -1;
-            this.speedy *= -1;
-            break;
+              if(this.x <= 0+this.radius)
+              {
+                  this.speedx *= -1;
+              }
+              if(this.x >= canvas.width-this.radius)
+              {
+                  this.speedx *= -1;
+              }
+              if(this.y <= 0+this.radius)
+              {
+                  this.speedy *= -1;
+              }
+              if(this.y >= canvas.height-this.radius)
+              {
+                  this.speedy *= -1;
+              }
+
+              for (var j = 0; j < particle_count; j++)
+              {
+                  var particleActuelle = particles[j],
+                      yd = particleActuelle.y - this.y,
+                      xd = particleActuelle.x - this.x,
+                      d  = Math.sqrt(xd * xd + yd * yd);
+
+                  if ( d < 200 )
+                  {
+                      context.beginPath();
+                      context.globalAlpha = (200 - d) / (200 - 0);
+                      context.globalCompositeOperation = 'destination-over';
+                      context.lineWidth = 1;
+                      context.moveTo(this.x, this.y);
+                      context.lineTo(particleActuelle.x, particleActuelle.y);
+                      context.strokeStyle = this.color;
+                      context.lineCap = "round";
+                      context.stroke();
+                      context.closePath();
+                  }
+              }
+          };
+      };
+      for (var i = 0; i < particle_count; i++)
+      {
+          fix_dpi();
+          var particle = new Particle();
+          particles.push(particle);
+      }
+
+
+      function animate()
+      {
+          fix_dpi();
+          context.clearRect(0, 0, canvas.width, canvas.height);
+          for (var i = 0; i < particle_count; i++)
+          {
+              particles[i].move();
+          }
+          requestAnimFrame(animate);
+      }
+
+
+
+
+      //animate();
+      var button_active = false;
+      function buttonActive(){
+        var menu = document.getElementById('myDropdown');
+        var hamburger = document.getElementsByClassName('hamburger');
+        console.log(menu + hamburger);
+        if(!button_active){
+          menu.style.display = "block";
+          hamburger[0].classList.add("is-active");
+          button_active = true;
+        }else{
+          menu.style.display = "none";
+          hamburger[0].classList.remove("is-active");
+          button_active = false;
         }
-
-        this.move = function()
-        {
-
-            context.beginPath();
-            context.globalCompositeOperation = 'source-over';
-            context.fillStyle   = this.color;
-            context.globalAlpha = 1;
-            context.arc(this.x, this.y, this.radius, 0, Math.PI*2, false);
-            context.fill();
-            context.closePath();
-
-            this.x = this.x + this.speedx;
-            this.y = this.y + this.speedy;
-
-            if(this.x <= 0+this.radius)
-            {
-                this.speedx *= -1;
-            }
-            if(this.x >= canvas.width-this.radius)
-            {
-                this.speedx *= -1;
-            }
-            if(this.y <= 0+this.radius)
-            {
-                this.speedy *= -1;
-            }
-            if(this.y >= canvas.height-this.radius)
-            {
-                this.speedy *= -1;
-            }
-
-            for (var j = 0; j < particle_count; j++)
-            {
-                var particleActuelle = particles[j],
-                    yd = particleActuelle.y - this.y,
-                    xd = particleActuelle.x - this.x,
-                    d  = Math.sqrt(xd * xd + yd * yd);
-
-                if ( d < 200 )
-                {
-                    context.beginPath();
-                    context.globalAlpha = (200 - d) / (200 - 0);
-                    context.globalCompositeOperation = 'destination-over';
-                    context.lineWidth = 1;
-                    context.moveTo(this.x, this.y);
-                    context.lineTo(particleActuelle.x, particleActuelle.y);
-                    context.strokeStyle = this.color;
-                    context.lineCap = "round";
-                    context.stroke();
-                    context.closePath();
-                }
-            }
-        };
-    };
-    for (var i = 0; i < particle_count; i++)
-    {
-        fix_dpi();
-        var particle = new Particle();
-        particles.push(particle);
-    }
-
-
-    function animate()
-    {
-        fix_dpi();
-        context.clearRect(0, 0, canvas.width, canvas.height);
-        for (var i = 0; i < particle_count; i++)
-        {
-            particles[i].move();
-        }
-        requestAnimFrame(animate);
-    }
-
-
-
-
-    animate();
-
+      }
     </script>
   </body>
 </html>
