first commit for new www

--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>Khor</title>
 </head>
 <body>
-    <p>khor.dev page in development</p>
+    <div class="header">
+        <div class="left"><img src="images/logo.png" alt="khor_logo"></div>
+        <div class="right">
+            <ul>
+                <li><a href="https://khor.store">Store</a></li>
+                <li><a href="#bio">About</a></li>
+                <li><a href="https://docs.khor.dev">Keyboard Bible</a></li>
+                <li><a href="#collaborations">Collaborations</a></li>
+            </ul>
+        </div>
+
+
+    </div>
+    <div class="bio" id="bio">
+        <img src="images/profile.jpeg" alt="io">
+        <h1>Hey, I'm Marco</h1><br><p>Computer Scientist who loves all about tech.<br>Since 2015 i started building my own computers, i ended up building other's keyboards, and i love it.</p>
+    </div>
+    <div class="work" id="work">
+        <img src="images/creators/pezzo.JPG" alt="io">
+        <h1>Passion</h1><br><p>In 2019 i started making cables for my keyboards, people on socials liked it so much that ended up being my main hobby. In 2021 Khor became an established business and since then my goal has been to offer the best mechanical keyboard experience to all Italians and worldwide.</p>
+
+    </div>
+    <div class="gallery">
+        <img src="images/creators/cyber_5.png" alt="">
+    </div>
+    <div class="work" id="work">
+        <img src="images/creators/shoot3.png" alt="io">
+        <h1>Perfection</h1><br><p>The continuous research for improvement is what makes every build near perfection, that's why i can't stop building new ones.<br>Building a keyboard is a hobby, building a <i>perfect</i> keyboard is art.</p>
+
+    </div>
+
+    <div class="collaborations" id="collaborations">
+        <h2>Who loved my work</h2>
+        <div class="creator-container">
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/power-pic.jpeg" alt="">
+            <p class="creatorname"><a href="https://www.twitch.tv/pow3r">Pow3r</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/shifty-pic.png" alt="">
+            <p class="creatorname"><a href="https://www.instagram.com/shiftymine/">Shiftymine</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/marza-pic.jpeg" alt="">
+            <p class="creatorname"><a href="https://www.twitch.tv/therealmarzaa">TheRealMarza</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/kurolily-pic.jpeg" alt="">
+            <p class="creatorname"><a href="https://www.twitch.tv/kurolily">Kurolily</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/moon-pic.png" alt="">
+            <p class="creatorname"><a href="https://www.twitch.tv/moonryde">Moonryde</a></p>
+        </span>
+
+        </div>
+        <div class="creator-container">
+
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/curve-pic.png" alt="">
+            <p class="creatorname"><a href="https://m.twitch.tv/cuurve_tv/home">Cuurve</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/axel-pic.png" alt="">
+            <p class="creatorname"><a href="https://www.instagram.com/nonsonoaxel/?hl=it">Axel</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/blink-pic.png" alt="">
+            <p class="creatorname"><a href="https://www.youtube.com/channel/UC6DI_pJ_ZwfK2eBtoB791mg">Blink46</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/prodi.png" alt="">
+            <p class="creatorname"><a href="https://www.youtube.com/@Prodigeek">Prodigeek</a></p>
+        </span>
+    </div>
+        <h2>Partners</h2>
+        <div class="creator-container">
+            <span class="creator">
+                <img class="creatorbio" src="images/creators/mtt.jpg" alt="">
+                <p class="creatorname"><a href="https://www.youtube.com/@MoreThanTech">MoreThanTech</a></p>
+            </span>
+            <span class="creator">
+                <img class="creatorbio" src="images/creators/saglia.jpg" alt="">
+                <p class="creatorname"><a href="https://www.youtube.com/@NicolaSagliano">Nicola Sagliano</a></p>
+            </span>
+            <span class="creator">
+                <img class="creatorbio" src="images/creators/zanni-pic.png" alt="">
+                <p class="creatorname"><a href="https://www.instagram.com/zannikb">ZanniKB</a></p>
+            </span>
+            <span class="creator">
+                <img class="creatorbio" src="images/creators/pezzo.png" alt="">
+                <p class="creatorname"><a href="https://www.instagram.com/pezzodinerd_/">Pezzodinerd</a></p>
+            </span>
+            <span class="creator">
+                <img class="creatorbio" src="images/creators/prophecy.jpg" alt="">
+                <p class="creatorname"><a href="https://www.youtube.com/c/prophecytechbynexthardware">ProphecyTech</a></p>
+            </span>
+
+
+        </div>
+    </div>
+    <div class="resources" id="links">
+        <div class="creator-container">
+            <li><a class="discord" href="https://discord.gg/tbgVcxrhK5">Discord Community</a></li>
+            <li><a href="https://www.instagram.com/moltenkhor">Instagram</a></li>
+            <li><a href="https://www.facebook.com/moltenkhor">Facebook</a></li>
+            <li><a href="https://twitter.com/Kh0r">Twitter</a></li>
+            <li><a href="https://www.tiktok.com/@moltenkhor">TikTok</a></li>
+            <li><a href="https://www.reddit.com/user/MoltenKhor/">Reddit</a></li>
+            <li><a href="https://www.twitch.tv/khorcables">Twitch</a></li>
+            <li><a href="https://www.threads.net/@moltenkhor">Threads</a></li>
+        </div>
+        
+
+    </div>
+    <div class="footer">
+        <p>© All rights reserved 2023. <br>Made with ❤️ in Italy 🇮🇹</p>
+    </div>
 </body>
 </html>
