--- a/www/index.html
+++ b/www/index.html
@@ -88,11 +88,11 @@
         <h2>Partners</h2>
         <div class="creator-container">
             <span class="creator">
-                <img class="creatorbio" src="images/creators/mtt.jpg" alt="">
+                <img class="creatorbio" src="images/creators/mtt.png" alt="">
                 <p class="creatorname"><a href="https://www.youtube.com/@MoreThanTech">MoreThanTech</a></p>
             </span>
             <span class="creator">
-                <img class="creatorbio" src="images/creators/saglia.jpg" alt="">
+                <img class="creatorbio" src="images/creators/saglia.png" alt="">
                 <p class="creatorname"><a href="https://www.youtube.com/@NicolaSagliano">Nicola Sagliano</a></p>
             </span>
             <span class="creator">
@@ -104,7 +104,7 @@
                 <p class="creatorname"><a href="https://www.instagram.com/pezzodinerd_/">Pezzodinerd</a></p>
             </span>
             <span class="creator">
-                <img class="creatorbio" src="images/creators/prophecy.jpg" alt="">
+                <img class="creatorbio" src="images/creators/prophecy.png" alt="">
                 <p class="creatorname"><a href="https://www.youtube.com/c/prophecytechbynexthardware">ProphecyTech</a></p>
             </span>
 
